tdf#94429, tdf#92198, tdf#95233: STYLE in conditional formatting

This is only a quick ugly hack and not a real fix. Basically we need to
prevent either using STYLE with more than one parameter in conditional
formatting functions or forbid the usage of STYLE completely.

In some way the usage of STYLE in conditional formatting means that our
current conditional formatting is not yet perfect. STYLE inside of a
conditional format is just insane from an evaluation perspective.

Change-Id: Ia1cc8c8cc8f00c8d4a055b1c2d128de3e1f8e4fa